--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
-    <title>唐氏国际控股(私人)有限公司</title>
+    <title>唐氏國際控股 | Fox Group</title>
     <style type="text/css" media="screen">
       body {
         background-color: #f1f1f1;
@@ -53,20 +53,25 @@
 
     <div class="container">
 
-      <h3>唐氏国际控股(私人)有限公司</h3>
+      <h3>唐氏國際控股(私人)有限公司</h3>
       <p><strong>Tang International Holdings (Pte) Ltd.</strong></p>
 
-      <p>
-        唐氏国际控股是一家全球投资咨询公司，坚持忠实践行我们的核心原则。通过不断开拓和创新，成为跨世代的投资者。我们的优势在于丰富的经验、深入的市场洞察力和领先的技术，能够为客户提供全面的投资咨询和风险管理服务，以实现长期的财务目标。另外，我们还坚信企业社会责任，注重可持续性发展，努力在投资中融入社会责任，为全球经济和社会做出贡献。
-      </p>
+      <p>唐氏國際控股是一家全球投資諮詢公司，堅持忠實踐行我們的核心原則。通過不斷開拓和創新，成為跨世代的投資者。</p>
+	  <p>我們的優勢在於豐富的經驗、深入的市場洞察力和領先的Ai與量子計算技術，能夠為客戶提供全面的投資諮詢和風險管理服務，以實現長期的財務目標。</p>
+	  <p>我們還堅信企業社會責任，注重可持續性發展，努力在投資中融入社會責任，為全球經濟和社會做出貢獻。</p>
 	  
-	  <p>
-        Tang International Holdings is a global investment consulting company that adheres to the faithful implementation of our core principles. Through continuous exploration and innovation, we aim to become multigenerational investors. Our strengths lie in our extensive experience, in-depth market insights, and leading technology, enabling us to provide clients with comprehensive investment advice and risk management services to achieve long-term financial goals. Additionally, we strongly believe in corporate social responsibility and emphasize sustainable development, striving to integrate social responsibility into our investment practices and contribute to the global economy and society.
-      </p>
+	  <p>Tang International Holdings is a global investment consulting company that adheres to the faithful implementation of our core principles. Through continuous exploration and innovation, we aim to become multigenerational investors. </p>
+	  <p>Our advantage lies in rich experience, deep market insights, leading AI and quantum computing technologies, which enable us to provide comprehensive investment consulting and risk management services to clients, achieving long-term financial goals.</p>
+	  <p>We also believe in corporate social responsibility and focus on sustainable development, striving to integrate social responsibility into investments and contribute to the global economy and society.</p>
+
+
+
+
+
 
       <div id="suggestions">
         <a href="https://foxtang.com">Fox Group</a> &mdash;
-        <a href="https://twitter.com/">@Fox Group</a>
+        <a href="mailto:PRW@FOXTANG.COM">Contact Us</a>
       </div>
 
       <a href="/" class="logo logo-img-1x">
