--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
-    <title>唐氏國際控股 | Fox Group</title>
+    <title>唐氏國際 | Fox Group</title>
     <style type="text/css" media="screen">
       body {
         background-color: #f1f1f1;
@@ -53,8 +53,8 @@
 
     <div class="container">
 
-      <h3>唐氏國際控股(私人)有限公司</h3>
-      <p><strong>Tang International Holdings (Pte) Ltd.</strong></p>
+      <h2>唐氏國際控股(私人)有限公司</h2>
+      <h2><p><strong>Tang International Holdings (Pte) Ltd.</strong></p></h2>
 
       <p>唐氏國際控股是一家全球投資諮詢公司，堅持忠實踐行我們的核心原則。通過不斷開拓和創新，成為跨世代的投資者。</p>
 	  <p>我們的優勢在於豐富的經驗、深入的市場洞察力和領先的Ai與量子計算技術，能夠為客戶提供全面的投資諮詢和風險管理服務，以實現長期的財務目標。</p>
