--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <div id="suggestions">
         <a href="https://foxtang.com">Fox Group</a> &mdash;
-        <a href="mailto:Customer.Service@foxtang.com">Contact Us</a>
+        <a href="mailto:CSC@foxtang.com">Contact Us</a>
       </div>
 
       <a href="/" class="logo logo-img-1x">
