--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ var _hmt = _hmt || [];
 			    <div class="alert alert-dismissable alert-success text-center">
 			      <h1><strong>莲花村网址导航</strong></h1>
 			      <br>
-			      <h3><strong><span style="color:red;font-weight:bold;">Ctrl+D收藏此网页</span>，仅限莲花村村民使用</strong></h3>
+			      <h3><strong><span style="color:red;font-weight:bold;">Ctrl+D收藏此网页</span>，此网站仅限莲花村村民使用</strong></h3>
 			    </div>
 		      </div>
 			</div>
@@ -104,19 +104,19 @@ var _hmt = _hmt || [];
 								<div class="col-md-6 column">
 									<div class="panel panel-info">
 										<div class="panel-heading">
-											<h3 class="panel-title">IT控制面板/操作手册</h3>
+											<h3 class="panel-title">莲花村图书馆</h3>
 										</div>
 										<div class="panel-body">
 										 <div>
-					<a href="ms-settings:"		class="btn btn-info btn-sm btn-block">系统设置面板</a>
+					<a href="https://www.kdocs.cn/l/cbIeiPjMYfVS"		class="btn btn-info btn-sm btn-block">白莲花村民档案</a>
 					</div>
 					<p>
 				    <div>
-					<a href="ms-settings:appsfeatures?activationSource=SMC-IA-4028054"		class="btn btn-info btn-sm btn-block">添加删除程序 / 应用和功能</a>
+					<a href="https://kdocs.cn/l/ca2GnyXJzWZ7"		class="btn btn-info btn-sm btn-block">美牛牛反诈风暴</a>
 					</div>
 					<p>
 					<div>
-					<a href="ms-settings:printers?activationSource=SMC-IA-4027695"		class="btn btn-info btn-sm btn-block">添加打印机或扫描仪</a>
+					<a href="https://kdocs.cn/l/crG4Erl5A3gD"		class="btn btn-info btn-sm btn-block">如何用保险保障自己的一生</a>
 					</div>
 					<p>
 					<div>
@@ -251,10 +251,9 @@ var _hmt = _hmt || [];
 					<div class="alert alert-dismissable alert-warning">
 						
 						<h4>
-							注意!
+							Power by ChatGPT
 						</h4>
-						如有任何问题,请发邮件到中国区IT团队<strong>(尽可能提供问题截图</strong>)<br>
-						CN IT Support &lt;CN_IT_Support@sinarmas-agri.com&gt;</div>
+						</div>
 				</div>
 			</div>
 		</div>
