--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ var _hmt = _hmt || [];
 			    <div class="alert alert-dismissable alert-success text-center">
 			      <h1><strong>莲花村网址导航</strong></h1>
 
-			      <h3><strong><span style="color:red;font-weight:bold;">Ctrl+D收藏此网页</span>，此网站仅限莲花村村民使用</strong></h3>
+			      <h3><strong><span style="color:red;font-weight:bold;">支持微信/电脑访问</span>，此网站仅限莲花村村民使用</strong></h3>
 			    </div>
 		      </div>
 			</div>
@@ -150,11 +150,11 @@ var _hmt = _hmt || [];
 					</div>
 					<p>
 					<div>
-					<a href="https://github.com/huiyadanli/RevokeMsgPatcher"		class="btn btn-info btn-sm btn-block">WX多开防撤回</a>
+					<a href="https://github.com/huiyadanli/RevokeMsgPatcher"		class="btn btn-info btn-sm btn-block">微信多开防撤回</a>
 					</div>
 					<p>
 					<div>
-					<a href="http://wx.mail.qq.com/ftn/download?func=3&k=caca65371759513cf8b916373a363633613f393738363633101a0c540c04070a540115560e50031e010c0b0e150e065700185e56590f025104030b005e013a33785c5b45577d7b601b4759452c8f880054e470765ee27fc1bbdc0031d21912a6f1&key=caca65371759513cf8b916373a363633613f393738363633101a0c540c04070a540115560e50031e010c0b0e150e065700185e56590f025104030b005e013a33785c5b45577d7b601b4759452c8f880054e470765ee27fc1bbdc0031d21912a6f1&code=55878663&from="		class="btn btn-info btn-sm btn-block">KMS</a>
+					<a href="https://gw.djtaoke.cn/static/silk/1693397646621/nauth.html?router=upper_793674071#/login?p=mine"		class="btn btn-info btn-sm btn-block">小蚕霸王餐</a>
 					</div>
 										  
 										</div>
@@ -171,8 +171,8 @@ var _hmt = _hmt || [];
 										<div class="panel-body">
 										  <div><a href="https://www.haitangbook.com/"										     class="btn btn-info btn-sm btn-block">境外文学作品</a></div><p>
 										  <div><a href="https://whichav.video/"			     class="btn btn-info btn-sm btn-block">18+网址大全</a></div><p>
-										  <div><a href="https://www.bluegv.com/"										     class="btn btn-info btn-sm btn-block">小蓝GV</a></div><p>
-										  <div><a href="https://m.xb84w.net/"										     class="btn btn-info btn-sm btn-block">小白网</a></div>
+										  <div><a href="https://www.bluegv.com/"										     class="btn btn-info btn-sm btn-block">小蓝GV</a></div>
+										  
 										  </div>
 										<div class="panel-footer"></div>
 									</div>
