--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- 版本更新记录.Fox.Tang -->  
 <head>
     <meta charset="UTF-8">
-    <title>莲花村网址导航</title>
+    <title>网址导航模板</title>
 <!-- 新 Bootstrap 核心 CSS 文件 -->
 <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
  
@@ -90,9 +90,9 @@ var _hmt = _hmt || [];
 			  <p>&nbsp;</p>
 			  <div class="col-md-12 column">
 			    <div class="alert alert-dismissable alert-success text-center">
-			      <h1><strong>莲花村网址导航</strong></h1>
+			      <h1><strong>网址导航模板</strong></h1>
 
-			      <h3><strong><span style="color:red;font-weight:bold;">支持微信/电脑访问</span>，此网站仅限莲花村村民使用</strong></h3>
+			      <h3><strong><span style="color:red;font-weight:bold;">支持微信/电脑访问</span>，HTML网址导航模板</strong></h3>
 			    </div>
 		      </div>
 			</div>
